# textual-haystack

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
blogs/: announcing-textual-haystack.md
examples/document_cleaner/: README.md  basic.py  pipeline.py  pyproject.toml
examples/entity_extraction/: README.md  basic.py  pipeline.py  pyproject.toml
src/haystack_integrations/components/tonic_textual/: __init__.py  document_cleaner.py  entity_extractor.py
tests/integration_tests/: test_document_cleaner.py  test_entity_extractor.py
tests/unit_tests/: test_document_cleaner.py  test_entity_extractor.py
